src/test/ui/parser/keyword-trait-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py trait'

fn main() {
    let trait = "foo"; //~ error: expected pattern, found keyword `trait`
}
